Added bootstrap styling to form.

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
       integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
       crossorigin="anonymous"
     ></script>
-    <title>Contact</title>
+    <title>Contact Page</title>
   </head>
   <body>
     <header>
@@ -67,12 +67,27 @@
           action="mailto:randomfake@email.com"
           method="post"
           enctype="text/plain"
+          onsubmit="event.preventDefault();"
         >
           <div class="form-group">
             <label for="name">Your name:</label>
-            <input type="text" name="name" value="name" required /> <br />
+            <input
+              type="text"
+              name="name"
+              value="name"
+              class="form-control"
+              required
+            />
+            <br />
             <label for="email">Your email:</label>
-            <input type="email" name="email" value="email" required /> <br />
+            <input
+              type="email"
+              name="email"
+              value="email"
+              class="form-control"
+              required
+            />
+            <br />
           </div>
           <label for="message">Your message:</label> <br />
           <textarea
@@ -80,10 +95,13 @@
             id="message"
             cols="30"
             rows="10"
+            class="form-control"
             required
           ></textarea>
           <br />
-          <button type="submit">Submit</button>
+          <button type="submit" value="submit" class="btn btn-lg btn-primary">
+            Submit
+          </button>
         </form>
       </div>
     </main>
