Fixed the text area box. Styled cleaner.

--- a/contact.html
+++ b/contact.html
@@ -74,8 +74,8 @@
             <input
               type="text"
               name="name"
-              value="name"
               class="form-control"
+              placeholder="name"
               required
             />
             <br />
@@ -83,8 +83,8 @@
             <input
               type="email"
               name="email"
-              value="email"
               class="form-control"
+              placeholder="email"
               required
             />
             <br />
@@ -93,9 +93,9 @@
           <textarea
             name="message"
             id="message"
-            cols="30"
-            rows="10"
+            style="height: 100px"
             class="form-control"
+            placeholder="Enter your message.."
             required
           ></textarea>
           <br />
