Made radar and contact html pages. Did the proper linking

--- a/radar.html
+++ b/radar.html
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="./css/.css" />
-    <title>Contact Page</title>
+    <title>Radar Page</title>
   </head>
   <body>
     <header>
@@ -51,60 +51,18 @@
                 <a class="nav-link" href="./about.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="./contact.html">Contact</a>
               </li>
               <!-- <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </li> -->
+            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+          </li> -->
             </ul>
           </div>
         </div>
       </nav>
     </header>
     <main>
-      <div class="container">
-        <h1>Contact Us</h1>
-        <form
-          action="mailto:randomfake@email.com"
-          method="post"
-          enctype="text/plain"
-          onsubmit="event.preventDefault();"
-        >
-          <div class="form-group">
-            <label for="name">Your name:</label>
-            <input
-              type="text"
-              name="name"
-              class="form-control"
-              placeholder="name"
-              required
-            />
-            <br />
-            <label for="email">Your email:</label>
-            <input
-              type="email"
-              name="email"
-              class="form-control"
-              placeholder="email"
-              required
-            />
-            <br />
-          </div>
-          <label for="message">Your message:</label> <br />
-          <textarea
-            name="message"
-            id="message"
-            style="height: 100px"
-            class="form-control"
-            placeholder="Enter your message.."
-            required
-          ></textarea>
-          <br />
-          <button type="submit" value="submit" class="btn btn-lg btn-primary">
-            Submit
-          </button>
-        </form>
-      </div>
+      <h1>Radar</h1>
     </main>
     <footer></footer>
   </body>
