Added an index.js file

--- a/about.html
+++ b/about.html
@@ -45,10 +45,10 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Radar</a>
+                <a class="nav-link" href="./radar.html">Radar</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="./about.html">About</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/contact.html">Contact</a>
