--- a/contact.html
+++ b/contact.html
@@ -45,13 +45,13 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Radar</a>
+                <a class="nav-link" href="./radar.html">Radar</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./about.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="./contact.html">Contact</a>
               </li>
               <!-- <li class="nav-item">
               <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
