Added the simple footer to all html pages

--- a/radar.html
+++ b/radar.html
@@ -64,6 +64,21 @@
     <main>
       <h1>Radar</h1>
     </main>
-    <footer></footer>
+    <footer>
+      <nav class="navbar fixed-bottom navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img
+              src="./logo-25.svg"
+              alt=""
+              width="30"
+              height="24"
+              class="d-inline-block align-text-top"
+            />
+            Fixed Footer Area
+          </a>
+        </div>
+      </nav>
+    </footer>
   </body>
 </html>
