--- a/contact.html
+++ b/contact.html
@@ -106,6 +106,21 @@
         </form>
       </div>
     </main>
-    <footer></footer>
+    <footer>
+      <nav class="navbar fixed-bottom navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img
+              src="./logo-25.svg"
+              alt=""
+              width="30"
+              height="24"
+              class="d-inline-block align-text-top"
+            />
+            Fixed Footer Area
+          </a>
+        </div>
+      </nav>
+    </footer>
   </body>
 </html>
