Font awesome linked to all html pages

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://kit.fontawesome.com/dcbcb40c25.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Home Page</title>
   </head>
   <body>
@@ -113,6 +117,7 @@
             />
             Fixed Footer Area
           </a>
+          <i class="fab fa-facebook-f"></i>
         </div>
       </nav>
     </footer>
