--- a/radar.html
+++ b/radar.html
@@ -15,6 +15,10 @@
       integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://kit.fontawesome.com/dcbcb40c25.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="./css/.css" />
     <title>Radar Page</title>
   </head>
