social media icons added to about html page

--- a/about.html
+++ b/about.html
@@ -80,6 +80,12 @@
             />
             Fixed Footer Area
           </a>
+          <div>
+            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fas fa-envelope"></i>
+          </div>
         </div>
       </nav>
     </footer>
