our index.js file is now connected to index.html. Here's where the bulk of our javascript will go. OpenWeather api fetching.

--- a/about.html
+++ b/about.html
@@ -66,6 +66,7 @@
     </header>
     <main>
       <h1>About Us</h1>
+      <h2>WE ARE MAY-WEATHER</h2>
     </main>
     <footer>
       <nav class="navbar fixed-bottom navbar-light bg-light">
