--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
                 <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./radar.html">Radar</a>
+                <a class="nav-link" href="weather-radar/radar.html">Radar</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./about.html">About</a>
