--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./radar.html">Radar</a>
+                <a class="nav-link" href="weather-radar/radar.html">Radar</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./about.html">About</a>
