Fixed some links to show image in the footer

--- a/weather-radar/radar.html
+++ b/weather-radar/radar.html
@@ -73,13 +73,13 @@
     <div id="timestamp" style="text-align:center; position: absolute;top: 80px; left: 0; right: 0; height: 80px;">FRAME TIME</div>
     
     <div id="mapid" style="position: absolute; top: 170px; left: 0; bottom: 0; right: 0;"></div>
-      <script src="radar.js"></script>
+      <script src="./radar.js"></script>
     </main>
     <footer>
       <nav class="navbar fixed-bottom navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img src="./logo-25.svg" alt="" width="30" height="24" class="d-inline-block align-text-top"/>Fixed Footer Area</a>
+            <img src="../logo-25.svg" alt="" width="30" height="24" class="d-inline-block align-text-top"/>Fixed Footer Area</a>
           <div>
             <i class="fab fa-facebook-f"></i>
             <i class="fab fa-twitter"></i>
