adds weather.html, weathericons.js, and removes unnecessary files from repo

--- a/weather.html
+++ b/weather.html
@@ -30,22 +30,29 @@
               <li class="nav-item">
                 <a class="nav-link" href="./contact.html">Contact</a>
               </li>
-              <!-- <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </li> -->
             </ul>
           </div>
         </div>
       </nav>
       <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
-          <form class="d-flex">
-            <input id="search-bar" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button id="submit-button" class="btn btn-outline-success" type="submit">Search</button>
-          </form>
+          
       </nav>
     </header>
     <main>
+        <form class="d-flex">
+            <input id="search-bar" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button id="submit-button" class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+      <div id="widget" class="widget">
+        <!-- <div id="location" class="location">City, State</div>
+        <div id="current" class="current">Current: 78°f</div>
+        <div id="feels-like" class="feels-like">Feels Like: 99°f</div>
+        <div id="high" class="high">High: 88°f</div>
+        <div id="low" class="low">Low: 70°f</div>
+        <div id="description" class="description">Rainy</div> -->
+      </div>
+
     </main>
     <footer>
       <nav class="navbar fixed-bottom navbar-light bg-light">
