--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="./contact.html">Contact</a>
               </li>
-              <!-- <li class="nav-item">
+              <li class="nav-item">
               <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </li> -->
+            </li>
             </ul>
           </div>
         </div>
