--- a/about.html
+++ b/about.html
@@ -32,6 +32,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="./contact.html">Contact</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./weather.html" >Current Weather</a>
+              </li>
               <!-- <li class="nav-item">
               <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
             </li> -->
