--- a/weather.html
+++ b/weather.html
@@ -20,16 +20,19 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./radar.html">Radar</a>
+                <a class="nav-link" href="weather-radar/radar.html">Radar</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./about.html">About</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./contact.html">Contact</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#" >Current Weather</a>
               </li>
             </ul>
           </div>
