added target_blank to contact html footer

--- a/contact.html
+++ b/contact.html
@@ -66,10 +66,10 @@
           <a class="navbar-brand" href="#">
             <img src="./logo-25.svg" alt="" width="30" height="24" class="d-inline-block align-text-top"/>May-Weather&trade;</a>
           <div class="col text-center">
-            <a href="https://www.facebook.com"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://www.twitter.com"><i class="fab fa-twitter"></i></a>
-            <a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
-            <a href="mailto:randomfake@gmail.com"><i class="fas fa-envelope"></i></a>
+            <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="mailto:randomfake@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
             <p>&copy;2021 | All rights Reserved</p>
           </div>
         </div>
