adjusted width and height of the images

--- a/carousel.html
+++ b/carousel.html
@@ -17,13 +17,13 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="./carousel_images/louis-hansel-IJ9Z8fcy3yE-unsplash.jpeg" class="d-block w-100" alt="...">
+        <img src="./carousel_images/louis-hansel-IJ9Z8fcy3yE-unsplash.jpeg" class="d-block w-100" alt="..." style="height: 300px; width: 300px;">
       </div>
       <div class="carousel-item">
-        <img src="./carousel_images/nasa-rTZW4f02zY8-unsplash.jpeg" class="d-block w-100" alt="...">
+        <img src="./carousel_images/nasa-rTZW4f02zY8-unsplash.jpeg" class="d-block w-100" alt="..." style="height: 300px; width: 300px;">
       </div>
       <div class="carousel-item">
-        <img src="./carousel_images/obi-onyeador-yukvZM3Z0e0-unsplash.jpeg" class="d-block w-100" alt="...">
+        <img src="./carousel_images/obi-onyeador-yukvZM3Z0e0-unsplash.jpeg" class="d-block w-100" alt="..." style="height: 300px; width: 300px;">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
