--- a/weather-radar/radar.html
+++ b/weather-radar/radar.html
@@ -76,13 +76,9 @@
             </select></li>
           </ul>
         </div>
-        <div class="container-fluid">
-          <!-- <div id="mapid" style="border: 2px solid crimson; margin: 0 auto;"></div> -->
-        </div>
-        <!-- <div id="timestamp" style="text-align:center; position: absolute;top: 80px; left: 0; right: 0; height: 80px;">FRAME TIME</div> -->
-      <!-- style="position: absolute; top: 170px; left: 0; bottom: 0; right: 0; -->
-        <div class="container-fluid radar-map" id="mapid"style=""></div>
+        <!-- <div class="container-fluid radar-map" id="mapid"style=""></div> -->
       </div>
+      <div class="container-fluid radar-map" id="mapid"style=""></div>
     </main>
     <footer>
       <nav class="navbar fixed-bottom navbar-light bg-light">
@@ -90,10 +86,10 @@
           <a class="navbar-brand" href="#">
             <img src="../logo-25.svg" alt="" width="30" height="24" class="d-inline-block align-text-top"/>May-Weather&trade;</a>
           <div class="col text-center">
-            <a href="https://www.facebook.com"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://www.twitter.com"><i class="fab fa-twitter"></i></a>
-            <a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
-            <a href="mailto:randomfake@gmail.com"><i class="fas fa-envelope"></i></a>
+            <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="mailto:randomfake@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
             <p>&copy;2021 | All rights Reserved</p>
           </div>
         </div>
