storing for branch change

--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
         </div>
       </nav>
     </footer>
+    <script src="./scripts/location.js"></script>
     <script src="./index.js"></script>
-    <script src="./news.js"></script>
+    <!-- <script src="./news.js"></script> -->
   </body>
 </html>
