--- a/carousel.html
+++ b/carousel.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="./css/main.css">
   <title>Document</title>
 </head>
 <body>
@@ -14,17 +15,31 @@
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
     </div>
-    <div class="carousel-inner">
+    <div class="carousel-inner" id="news-carousel">
       <div class="carousel-item active">
-        <img src="./carousel_images/louis-hansel-IJ9Z8fcy3yE-unsplash.jpeg" class="d-block w-100" alt="..." style="height: 300px; width: 300px;">
+        <a target="_blank" href="https://www.engadget.com/att-firstnet-5g-public-safety-network-133023906.html"><img src="https://s.yimg.com/os/creatr-uploaded-images/2021-04/709cb5a0-92e0-11eb-8fdd-12378299c56c" class="d-block w-100" alt="AT&T adds 5G to its public safety network"></a>
       </div>
       <div class="carousel-item">
+        <a target="_blank" href="https://www.engadget.com/att-firstnet-5g-public-safety-network-133023906.html"><img src="https://s.yimg.com/os/creatr-uploaded-images/2021-04/709cb5a0-92e0-11eb-8fdd-12378299c56c" class="d-block w-100" alt="AT&T adds 5G to its public safety network" ></a>
+      </div>
+      <!-- <div class="carousel-item">
+        <a target="_blank" href="https://www.engadget.com/att-firstnet-5g-public-safety-network-133023906.html"><img src="https://s.yimg.com/os/creatr-uploaded-images/2021-04/709cb5a0-92e0-11eb-8fdd-12378299c56c" class="d-block w-100" alt="AT&T adds 5G to its public safety network" ></a>
+      </div>
+      <div class="carousel-item">
+        <a target="_blank" href="https://www.engadget.com/att-firstnet-5g-public-safety-network-133023906.html"><img src="https://s.yimg.com/os/creatr-uploaded-images/2021-04/709cb5a0-92e0-11eb-8fdd-12378299c56c" class="d-block w-100" alt="AT&T adds 5G to its public safety network" ></a>
+      </div>
+      <div class="carousel-item">
+        <a target="_blank" href="https://www.engadget.com/att-firstnet-5g-public-safety-network-133023906.html"><img src="https://s.yimg.com/os/creatr-uploaded-images/2021-04/709cb5a0-92e0-11eb-8fdd-12378299c56c" class="d-block w-100" alt="AT&T adds 5G to its public safety network" ></a>
+      </div> -->
+      <!-- <div class="carousel-item">
         <img src="./carousel_images/nasa-rTZW4f02zY8-unsplash.jpeg" class="d-block w-100" alt="..." style="height: 300px; width: 300px;">
       </div>
       <div class="carousel-item">
         <img src="./carousel_images/obi-onyeador-yukvZM3Z0e0-unsplash.jpeg" class="d-block w-100" alt="..." style="height: 300px; width: 300px;">
-      </div>
+      </div> -->
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
