--- a/weather.html
+++ b/weather.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous"/>
     <link rel="stylesheet" href="./css/weather.css" />
-    <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="../css/footer.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/dcbcb40c25.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
@@ -41,7 +41,6 @@
       </nav>
       <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
-          
       </nav>
     </header>
     <main>
@@ -52,24 +51,22 @@
         </form>
       </div>  
       <div id="weather-widget" class="widget">
-        
       </div>
-
     </main>
-    <footer>
-      <nav class="navbar fixed-bottom navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-            <img src="./logo-25.svg" alt="" width="30" height="24" class="d-inline-block align-text-top"/>May-Weather&trade;</a>
-          <div class="col text-center">
-            <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
-            <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="mailto:randomfake@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
-            <p>&copy;2021 | All rights Reserved</p>
+    <footer class="footer fixed-bottom bg-light">   <!--removed nav tags and used footer tags instead-->
+      <div class="container-footer">    <!--changed from container-fluid to container-footer-->
+          <div class="logo"><img src="./logo-14.svg" alt="Logo" /></div>    <!--updated logo to just a picture logo; old logo had text and was placed next to more text-->
+          <div class="media">   <!--created a div called media to make them responsive-->
+            <a href="https://www.facebook.com"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.twitter.com"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
+            <a href="mailto:randomfake@gmail.com"><i class="fas fa-envelope"></i></a>
           </div>
-        </div>
-      </nav>
+          <div class="footer-text">   <!--created a div footer-text to make foot text responsive-->
+            <p>May-Weather&trade;</p>
+            <p> &copy;2021</p>
+            <p>All Rights Reserved</p>
+          </div>
     </footer>
     <script src="./index.js"></script>
   </body>
