Made bootstrap card blue and transparant

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </header>
     <main>
       <a id = "map-link" target="_blank"></a>
-      <div class="weather" id="weather-widget">
+      <div class="weather special-card2" id="weather-widget">
         
       </div>
     </main>
