remove carousel.html, and adds a carousel to index.html with data being rendered from index.js

--- a/weather-radar/radar.html
+++ b/weather-radar/radar.html
@@ -95,6 +95,7 @@
         </div>
       </nav>
     </footer>
+    <script src="../scripts/location.js"></script>
     <script src="./radar.js"></script>
   </body>
 </html>
